fixed some spacing issues with the profile page

--- a/frontend/src/pages/Profile/profile.css
+++ b/frontend/src/pages/Profile/profile.css
@@ -32,9 +32,10 @@
 }
 
 .upload_form {
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
+    margin: auto;
 }
 
 /* TODO fix show upload photo alignment */
@@ -47,7 +48,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 200px;
+    width: 282.85px;
 }
 
 .upload_photo_inputs {
